--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: implied
 Type: Package
-Title: Convert Odds To Probabilities
+Title: Convert Odds to Probabilities
 Version: 0.1.0
-Author: Jonas Christoffer Lindstrøm
+Author: Jonas Christoffer Lindstrøm, Jonas Moss
 Maintainer: Jonas Christoffer Lindstrøm <jonaslindstrom88@gmail.com>
 Description: Convert bookmaker odds into proper probabilities.
 License: GPL-3
